--- a/source/_posts/小程序的爬坑之路.md
+++ b/source/_posts/小程序的爬坑之路.md
@@ -1,7 +1,7 @@
 ---
 title: 小程序的爬坑之路
 tags: 
-  - 小程序开发 
+  - 小程序
   - 新知识
 categories: whaat
 ---
@@ -61,6 +61,7 @@ methods: {
 ## 富文本转化为小程序
 ```
 引入wxParse组件
+github地址：https://github.com/icindy/wxParse
 ```
 
 ## 使用自定义头部
@@ -76,6 +77,15 @@ json-----"navigationStyle":"custom"
 
 + wx.getMenuButtonBoundingClientRect() 获取菜单按钮（右上角胶囊按钮）的布局位置信息。坐标信息以屏幕左上角为原点。
 + 这个参数可以获取胶囊位置，实现上部边缘对齐。如果是居中对齐的话，就不能准确定位了，因为每个手机的胶囊按钮大小高度不一致。
+
+
+## wxss中的背景图片无法显示
+图片为本地图片会发生。解决办法：
+
++ 图片使用base64的格式，或者是线上地址（不建议使用）
++ 直接在wxml里面代码块直接添加背景图，开发者工具可以显示，真机不显示（不建议使用）（背景图是线上地址真机可以）
++ 布局解决，同级加image（你要加的背景图），设置absolute，z-index=-1；当前元素relative；（建议使用）
+
 
 
 
