--- a/source/_posts/专有词汇和技术链接.md
+++ b/source/_posts/专有词汇和技术链接.md
@@ -15,4 +15,9 @@ PWA文档：https://lavas.baidu.com/pwa
 黄玄博客：http://huangxuan.me/
 前端开发网址（前端技术大杂烩）：http://caibaojian.com/
 vue技术揭秘：https://ustbhuangyi.github.io/vue-analysis/
+webWorker实例：https://mdn.github.io/simple-web-worker/
+```
+
+```
+Lodash 是一个一致性、模块化、高性能的 JavaScript 实用工具库。
 ```
