--- a/source/_posts/每天进步一点点.md
+++ b/source/_posts/每天进步一点点.md
@@ -7,4 +7,74 @@ tags: 零碎
 每天一小步，技术一大步
 <!-- more -->
 
-`Chrome 有四种缓存: HTTP 缓存，内存缓存，Service Worker 缓存和 Push 缓存。`
+## 缓存
+```
+Chrome 有四种缓存: HTTP 缓存，内存缓存，Service Worker 缓存和 Push 缓存。
+<link rel="preload"> 和 <link rel="prefetch"> 的缓存行为,属于http缓存
+不带 as 属性的 preload 的优先级将会等同于异步请求。
+script async不好因为它会阻塞 window 的 onload 事件。你可以尽早加载图片、样式、字体和媒体资源。
+```
+
+ ## 单位像素vh、vw、vmax、vmin
+ 兼容性：vh、vw、vmin---ie9+= 
+        vmin---不兼容ie
+ ```
+ height:100vh  ===  当前视图高度的100%；
+ weight:100vw  ===  当前视图宽度的100%；
+ height：100vmax  ===  当前视图高度和宽度比较，数值的大的那个的100%；
+ height：100vmin  ===  当前视图高度和宽度比较，数值的小的那个的100%；
+ ```
+
+ ## 阻止默认事件、防止冒泡事件
+ e.preventDefault()
+ e.stopPropagation()
+
+
+ ## find() 循环事件
+ 
+
+ ## 关于深拷贝     
+ ```
+ obj={aa:1}
+ let newObj=obj //浅拷贝
+ newObj.aa=2
+ console.log(obj)  //{aa:2}
+ ```
+ 问题描述：newObj更改了值，obj也会更改。此时需要进行深拷贝。
+
+ ### 深拷贝方法
+
+ #### 第一层拷贝
+ 1: 拷贝数组
+ + 直接遍历
+ + slice()  // array.slice()
+ + concat()  // array.concat()
+
+ 2: 拷贝对象
+ + 直接遍历  //for in 或者 for (let [key, value] of Object.entries(object1)) {}
+ + Object.assign  // ES6; Object.assign({}, obj)
+ + 扩展运算符
+
+ #### 拷贝所有层
+ + JSON.parse(JSON.stringify(array))
+ + 手动写递归
+
+ ### 大量深拷贝代码解决immutable.js
+ **原理：结构共享**
+ 新生成一个根节点，对于有修改的部分，把相应路径上的所有节点重新生成，对于本次操作没有修改的部分，我们可以直接把相应的旧的节点拷贝过去
+
+
+ ## 检测是否是数组
+ + Array.isArray()  //ES5
+ + 添加下面的方法
+
+ ```
+ if (!Array.isArray) {
+    Array.isArray = function(arg) {
+      return Object.prototype.toString.call(arg) === '[object Array]';
+    };
+ }
+ ```
+
+ 
+
