--- a/source/_posts/服务器的零碎记录.md
+++ b/source/_posts/服务器的零碎记录.md
@@ -7,14 +7,16 @@ title: 服务器的零碎记录
 ## mac的操作篇
 
 ### 关闭端口
-```
+
+```bash
 lsof -i:8080
 kill -9 665(665为上条)
 ```
 
 ### mac远程通过密钥链接服务器
-```
-cd ~/.ssh/ （进入ssh文件夹） 
+
+```bash
+cd ~/.ssh/ （进入ssh文件夹）
 cat id_rsa.pub （复制id_rsa.pub，如果没有先生成密钥：ssh-keygen -t rsa）
 （将复制的密钥添加到目标服务器，添加后重启目标服务器）
 vim config (编辑ssh的config文件)（
@@ -28,12 +30,14 @@ ssh tencent
 ```
 
 ### vim
-```
+
+```bash
 vi/vim linux的内置编辑器
 ```
 
 ### 配置nginx（域名不加端口皆可以访问）
-```
+
+```bash
 cd /www/server/panel/vhost/nginx/ 进入nainx的目录下
 vim test.xiongloveying.xyz.conf 编辑当前域名下的文件(:i--编辑文本、:x--退出文本、:wq--保存退出文本)
 nginx -t 查看修改后的文件语法是否正确
