--- a/source/_posts/专有词汇和技术链接.md
+++ b/source/_posts/专有词汇和技术链接.md
@@ -4,6 +4,10 @@ date: 2019-11-01 18:17:45
 tags: 零碎
 ---
 
+眼界
+
+<!-- more -->
+
 ```
 MPA:多页面应用
 SPA:单页面应用
@@ -21,3 +25,10 @@ webWorker实例：https://mdn.github.io/simple-web-worker/
 ```
 Lodash 是一个一致性、模块化、高性能的 JavaScript 实用工具库。
 ```
+
+## SSR-服务端渲染
+
++ 介绍：简单理解是将组件或页面通过服务器生成html字符串，再发送到浏览器，最后将静态标记"混合"为客户端上完全交互的应用程序。
++ 优点：1. 更利于SEO。2. 更利于首屏渲染。
++ 缺点：1.服务端压力较大。2.开发条件受限。3.学习成本相对较高。
++ 利于首屏渲染的原因：由服务端请求首屏数据，而不是客户端请求首屏数据，这是“快”的一个主要原因。服务端在内网进行请求，数据响应速度快。客户端在不同网络环境进行数据请求，且外网http请求开销大，导致时间差。
