--- a/source/_posts/小程序/小程序的爬坑之路.md
+++ b/source/_posts/小程序/小程序的爬坑之路.md
@@ -1,9 +1,8 @@
 ---
-title: 小程序的爬坑之路
+title: 小程序的爬坑之路（一）
 tags: 
   - 小程序
-  - 新知识
-categories: whaat
+categories: 推荐
 ---
 对开发中小程序遇到的坑做一个记录
 <!-- more -->
