--- a/source/_posts/小程序/小程序的爬坑之路.md
+++ b/source/_posts/小程序/小程序的爬坑之路.md
@@ -8,6 +8,7 @@ categories: 推荐
 <!-- more -->
 
 ## 手机端屏幕四个圆拐角的配置问题
+
 描述：设置的bottom的距离是离屏幕底部的距离，想要设置为离屏幕圆角上沿的距离
 ```
 办法：添给元素添加数据：padding-bottom: env(safe-area-inset-bottom);
@@ -58,9 +59,12 @@ methods: {
 注意：canvas一定要在真机上多看看。
 
 ## 富文本转化为小程序
-```
+
+```js
 引入wxParse组件
 github地址：https://github.com/icindy/wxParse
+
+我是个傻子。微信自己有组件。rich-text
 ```
 
 ## 使用自定义头部
