--- a/source/_posts/小程序/小程序进阶.md
+++ b/source/_posts/小程序/小程序进阶.md
@@ -13,3 +13,60 @@ tags: 小程序
 ```
 
 ```
+
+## 保存网络图片
+
+```js
+Page({
+  data: {
+      url:"https://wechat.weixinzjit.com/costa/public/uploads/images/20190109/67b16149693920598435315fd0d5ab3e.jpg"
+  },
+  // 长按保存图片
+  saveImg(e){
+    let url = e.currentTarget.dataset.url;
+    //用户需要授权
+    wx.getSetting({
+      success: (res) => {
+        if (!res.authSetting['scope.writePhotosAlbum']) {
+          wx.authorize({
+            scope: 'scope.writePhotosAlbum',
+            success:()=> {
+              // 同意授权
+              this.saveImg1(url);
+            },
+            fail: (res) =>{
+              console.log(res);
+            }
+          })
+        }else{
+          // 已经授权了
+          this.saveImg1(url);
+        }
+      },
+      fail: (res) =>{
+        console.log(res);
+      }
+    })
+  },
+  saveImg1(url){
+    wx.getImageInfo({
+      src: url,
+      success:(res)=> {
+        let path = res.path;
+        wx.saveImageToPhotosAlbum({
+          filePath:path,
+          success:(res)=> { 
+            console.log(res);
+          },
+          fail:(res)=>{
+            console.log(res);
+          }
+        })
+      },
+      fail:(res)=> {
+        console.log(res);
+      }
+    })
+  },
+})
+```
