--- a/source/_posts/服务器/服务器的零碎记录.md
+++ b/source/_posts/服务器/服务器的零碎记录.md
@@ -61,3 +61,8 @@ nginx -s reload 重启nginx的配置
 ## host配置（域名映射）
 
 `sudo vi  /etc/hosts`
+
+## 修改文件权限
+
+`sudo chmod -R g+w /usr/local/Caskroom/`
+`sudo chgrp -R admin /usr/local/Caskroom/`
