--- a/source/_posts/小程序/小程序的爬坑之路（二）.md
+++ b/source/_posts/小程序/小程序的爬坑之路（二）.md
@@ -17,8 +17,33 @@ categories: 推荐
 
 ## 去调小程序button的边框线
 
-```
+```css
 button::after{
   border:none;
 }
 ```
+
+## 调用上个页面方法和数组
+
+```js
+//获取已经打开的页面的数组
+var pages = getCurrentPages();
+//获取上一个页面的所有的方法和data中的数据
+var lastpage = pages[pages.length - 2]
+//改变上一个页面中的data中的数据
+lastpage.setData({
+ flag: false,
+})
+var s = this.data.datas
+//调用上一个页面中的changeData方法
+lastpage.changeData(s)
+```
+
+## 锚点定位
+
+将page的高度设置为100%；
+导航下面的内容部分必须用\<scroll-view>包起来
+设置scroll-view的高度=屏幕的高度-导航的高度
+设置scroll-view的属性scroll-into-view="{{toView}}"
+设置scroll-view的属性scroll-y="true"
+设置锚点\<view id="position1">
