--- a/source/_posts/小程序/小程序进阶.md
+++ b/source/_posts/小程序/小程序进阶.md
@@ -8,10 +8,11 @@ tags: 小程序
 <!-- more -->
 
 ## 自定义组件
+
 对于重复的模块，要写到组件里。可以是ui组件，可以是js组件，也可以是html+css+js的组合
 
-```
-
+```js
+具体看另一篇博客
 ```
 
 ## 保存网络图片
