--- a/source/_posts/服务器/服务器的零碎记录.md
+++ b/source/_posts/服务器/服务器的零碎记录.md
@@ -66,3 +66,11 @@ nginx -s reload 重启nginx的配置
 
 `sudo chmod -R g+w /usr/local/Caskroom/`
 `sudo chgrp -R admin /usr/local/Caskroom/`
+
+## 删除
+
+```js
+rmdir 目录 // 删除空目录
+rm -rf 目录名字 // 删除文件夹（无论文件夹是否为空）
+rm -f 文件名 // 强制删除文件
+```
