悦店结束的更新

--- a/source/_posts/服务器/服务器的零碎记录.md
+++ b/source/_posts/服务器/服务器的零碎记录.md
@@ -74,3 +74,7 @@ rmdir 目录 // 删除空目录
 rm -rf 目录名字 // 删除文件夹（无论文件夹是否为空）
 rm -f 文件名 // 强制删除文件
 ```
+
+## 删除.DS_Store
+
+`find . -name .DS_Store -print0 | xargs -0 git rm -f --ignore-unmatch`
