--- a/source/_posts/小程序/小程序的爬坑之路.md
+++ b/source/_posts/小程序/小程序的爬坑之路.md
@@ -11,7 +11,10 @@ categories: 推荐
 
 描述：设置的bottom的距离是离屏幕底部的距离，想要设置为离屏幕圆角上沿的距离
 ```
-办法：添给元素添加数据：padding-bottom: env(safe-area-inset-bottom);
+办法：添给元素添加
+padding-bottom: constant(safe-area-inset-bottom); /* 兼容 iOS < 11.2 */
+padding-bottom: env(safe-area-inset-bottom); /* 兼容 iOS >= 11.2 */
+h5中需要加：<meta name="viewport" content="width=device-width, viewport-fit=cover">
 ```
 
 ## 自定义tab栏问题
@@ -24,8 +27,8 @@ categories: 推荐
 获取微信版本，最兼容性处理。低版本让更新。否则直接进入的话，底部的tab栏会在其他页面显示，遮挡页面影响使用。
 ```
 
-
 ### 问题2. 自定义的tab点击的时候会有图标显示延后的问题
+
 在tab组件中做处理
 ```
 <cover-view class="tab-bar">
@@ -49,13 +52,13 @@ methods: {
 }
 ```
 
-
-
 ## canvas的上层元素兼容性
+
 描述：用cover-view官方给的这些元素包裹，有时候在iso上出现按钮的显示问题，或者透明元素（button-AAA）的不出现区块的问题。
 ```
 办法：AAA的元素添加0.1的opacity。文字也得有。
 ```
+
 注意：canvas一定要在真机上多看看。
 
 ## 富文本转化为小程序
@@ -68,29 +71,21 @@ github地址：https://github.com/icindy/wxParse
 ```
 
 ## 使用自定义头部
+
 ```
 json-----"navigationStyle":"custom"
 ```
 
-
 + 建议自定义头部不要添加搜索。
 + 因为搜索往往对应的要与右侧的胶囊保持水平对齐（需求），现在各种刘海屏的手机，适配存在问题
-
-
 
 + wx.getMenuButtonBoundingClientRect() 获取菜单按钮（右上角胶囊按钮）的布局位置信息。坐标信息以屏幕左上角为原点。
 + 这个参数可以获取胶囊位置，实现上部边缘对齐。如果是居中对齐的话，就不能准确定位了，因为每个手机的胶囊按钮大小高度不一致。
 
-
 ## wxss中的背景图片无法显示
+
 图片为本地图片会发生。解决办法：
 
 + 图片使用base64的格式，或者是线上地址（不建议使用）
 + 直接在wxml里面代码块直接添加背景图，开发者工具可以显示，真机不显示（不建议使用）（背景图是线上地址真机可以）
 + 布局解决，同级加image（你要加的背景图），设置absolute，z-index=-1；当前元素relative；（建议使用）
-
-
-
-
-
-
