win入职格如灵代码提交

--- a/source/_posts/vue/添加动态样式.md
+++ b/source/_posts/vue/添加动态样式.md
@@ -87,4 +87,5 @@ tags: vue
 
 ```
   :style="{'background':(item.lineColor ? item.lineColor : '#1876d2')}"
+  :style="[{'background':'url'+ite.url}]"
 ```
