--- a/source/_posts/小程序/小程序的爬坑之路（二）.md
+++ b/source/_posts/小程序/小程序的爬坑之路（二）.md
@@ -47,3 +47,43 @@ lastpage.changeData(s)
 设置scroll-view的属性scroll-into-view="{{toView}}"
 设置scroll-view的属性scroll-y="true"
 设置锚点\<view id="position1">
+
+## textarea和input上的遮罩bug
+
+问题描述：在黑色的遮罩上，会有input的值显示在上面，怎么调z-index也没用
+
+解决办法：
+
+1. 显示遮罩的时候，隐藏input元素，同等元素代替（太麻烦，舍弃）
+2. 用cover-view组件去承载遮罩层（可行，需要注意cover-view的可覆盖组件）
+
+## textarea在ios上的padding兼容性问题
+
+问题描述：textarea在ios上比安卓上的padding要大。
+
+解决办法：wx.getSystemInfo获取是ios和安卓。ios的时候margin：-10rpx
+
+## 组件化底部tab栏，ios兼容性问题
+
+### ios的底部有黑条，会挡住tan栏
+
+解决办法：
+
+```css
+padding-bottom: constant(safe-area-inset-bottom);
+padding-bottom: env(safe-area-inset-bottom);
+
+// 注意：在h5中需要修改，viewport-fit=cover。
+<meta name="viewport" content="width=device-width, viewport-fit=cover">
+```
+
+### fixed布局bug
+
+问题描述：原生自带满足不了需求，需要用组件来替代。有时候会上弹上去
+
+分析：这个是上拉的时候引起的底部变化。ios对fixed不友好。
+
+解决办法：页面尽量别太复杂。利用view-scroll的上拉。
+
+
+
