--- a/source/_posts/服务器/服务器的零碎记录.md
+++ b/source/_posts/服务器/服务器的零碎记录.md
@@ -74,3 +74,19 @@ rmdir 目录 // 删除空目录
 rm -rf 目录名字 // 删除文件夹（无论文件夹是否为空）
 rm -f 文件名 // 强制删除文件
 ```
+
+## 删除node_modules
+
+```#
+npm install rimraf -g
+rimraf node_modules
+```
+
+## win关机
+
++ 3600秒后关机
+`shutdown -s -t 3600` 
+
++ 取消关机
+`shutdown -a`
+
