--- a/source/_posts/服务器/服务器的零碎记录.md
+++ b/source/_posts/服务器/服务器的零碎记录.md
@@ -17,6 +17,13 @@ lsof -i:8080
 kill -9 665(665为上条PID对应数字)
 ```
 
+### win关闭端口
+
+```bash
+netstat -ano | findstr 9012
+taskkill /F /PID 3924
+```
+
 ### mac远程通过密钥链接服务器
 
 ```bash
