feat: 更新模型结构文章

--- a/source/_posts/3d/模型格式.md
+++ b/source/_posts/3d/模型格式.md
@@ -5,8 +5,18 @@ date: 2023-02-17 23:06:14
 
 ## FBX
 
-工具间互导优秀
+3D软件工具间互导优秀。
+FBX格式最大的用途是在3dsMax、Maya、softimage等软件间进行模型、材质、动作和摄影机信息的互导，这样就可以发挥max和maya等各个软件的优势。
 
 ## glTF
 
-.GLB和.GLTF是这种格式的这两种不同版本。官方推荐这种格式
+GLTF的全称是Graphics Language Transmission Format（图形语言传输格式）。这种跨平台格式已成为Web上的3D对象标准。它由OpenGL和Vulkan背后的3D图形标准组织Khronos所定义，这使得GLTF基本上成为3D模型的JPG格式：Web导出的通用标准。
+glTF可以包括场景、摄像机、动画等，也可以包括网格、材质、纹理，甚至包括了渲染技术（technique）、着色器以及着色器程序。同时由于json格式的特点，它支持预留一般以及特定供应商的扩展。
+.GLB和.GLTF是这种格式的这两种不同版本。THREEJS官方推荐这种格式
+
+## OBJ
+
+3D软件模型间的互导。
+OBJ文件一般包括三个子文件，分别是.obj、.mtl、.jpg，除了模型文件，还需要.jpg纹理文件。OBJ可以是传统模型，也可以是倾斜模型。
+OBJ文件是一种3D模型文件。不包含动画、材质特性、贴图路径、动力学、粒子等信息。
+
